<resources>
    <string name="app_name">互祝</string>
    <string name="commoncode_errorcode_arguments_invalid">请检查相关的配置信息是否正确。比如：manifest文件中的appid；是否使用证书签名等。</string>
    <string name="commoncode_errorcode_internal_error">内部接口出现异常，请联系华为方支持人员。</string>
    <string name="commoncode_errorcode_naming_invalid">请检查构建HuaweiApiClient时设置的API是否正确。</string>
    <string name="commoncode_errorcode_client_api_invalid">HuaweiApiClient未连接就调用的接口，请检查onConnectionFailed是否正确处理，以及错误码是什么。</string>
    <string name="commoncode_errorcode_execute_timeout">此错误码只出现在开发者直接调用await接口时，请尝试将超时时间参数加大。如果觉得已经影响业务，请联系华为方支持人员。</string>
    <string name="commoncode_errorcode_not_in_service">区域不支持此业务</string>
    <string name="commoncode_errorcode_session_invalid">说明session过期了，需要重新连接华为移动服务。</string>
    <string name="commoncode_errorcode_other">未知错误码：</string>
    <string name="please_try_again_hw_push">请重新尝试</string>
    <string name="net_tishi">网络连接不稳定，请稍后重试</string>
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>
    <string name="mark_money">¥</string>
    <string name="main_title">健康互祝公社</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="bottom_center">我家</string>
    <string name="bottom_transaction">兑换</string>
    <string name="bottom_exchange">互换</string>
    <string name="bottom_helpwith">互祝</string>
    <string name="bottom_home">首页</string>
    <string name="LoginWx_nottishi">请先安装微信客户端</string>
    <string name="xingJi">星级</string>
    <string name="becomeCHO">成为CHO</string>
    <string name="becomeCHO_tishi">成为CHO呵护家人健康每一天！</string>
    <string name="hint_write">请填写</string>
    <string name="hint_select">请选择</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="dialog_logout_title">下线通知</string>
    <string name="dialog_logout_cirt">您的账号已在其他设备登录</string>
    <string name="login_account">账号登录</string>
    <string name="login_phone">手机快捷登录</string>
    <string name="register">注册</string>
    <string name="forgetpw">忘记密码？</string>
    <string name="code_get">验证码</string>
    <string name="tv_codeunit">s</string>
    <string name="account_hint">请输入手机号码</string>
    <string name="account_showtishi">请输入正确的手机号码</string>
    <string name="pw_hint">请输入登录密码</string>
    <string name="code_hint">请输入短信验证码</string>
    <string name="code_showtishi">请输入正确验证码</string>
    <string name="next">下一步</string>
    <string name="over">完成</string>
    <string name="login_text">登录</string>
    <string name="third_login_text">使用社交账号一键登录</string>
    <string name="forget_tilte">找回登录密码</string>
    <string name="code_title">短信验证码</string>
    <string name="forget_repeatpw">重置密码</string>
    <string name="forget_repeatpw_hint">请输入6-20位密码</string>
    <string name="forget_repeatpwtwo_hint">请再次输入6-20位密码</string>
    <string name="forget_repeatpwtwosame_hint">两次输入密码不一致</string>
    <string name="register_tilte">输入手机号</string>
    <string name="register_name_hint">请输入您的真实姓名</string>
    <string name="set">设置</string>
    <string name="recovercash_tilte">提现</string>
    <string name="order_all_tilte">全部订单</string>
    <string name="order_coming_tilte">进行中</string>
    <string name="order_pendingreceipt_tilte">待收货</string>
    <string name="order_completed_tilte">已完成</string>
    <string name="rebirth_tishi">
        1、什么是重生卡？
　　\n\u3000\u3000可使CHO星级立即清零的特效卡。
\n\
2、为什么会有重生卡？
　　\n\u3000\u3000CHO星级的保持与“互祝次数或互祝能量的日均值”挂钩，针对希望快速升级到预期星级的用户推出重生卡。
\n\
3、重生卡使用后效果
　　\n\u3000\u3000重生卡一经使用，CHO星级立即清零，对应升至下一级的剩余互祝次数或生命能量也清零。原有的累计互祝总次数、累计互祝生命能量、寿康宝、账户余额、我的订单等数据均不改变。
\n\
4、如何使用重生卡？
　　\n\u3000\u3000在“我家”界面点击重生卡按钮，进入重生卡界面，点击左上方CHO重生标签，即可启动CHO重生，系统会提示星级和相关联的剩余互祝次数、互祝生命能量清零，且无法恢复。用户确认后，系统会通过输入短信验证码进行确认。星级清零后，根据互祝情况和星级规则开始重新评定星级，完成重生过程。
\n\
5、其它说明
　\n\u3000\u30001）CHO可在任何时间使用重生卡，只有一次机会；
　\n\u3000\u30002）使用后CHO原有星级数据无法恢复；
　\n\u3000\u30003）使用后的星级津贴发放与提现规则不变（详见CHO规则）。
    </string>
    <string name="news_all">全部</string>
    <string name="news_healthy_knowledge">健康知识</string>
    <string name="news_novice_guide">新手指南</string>
    <string name="news_notice">平台公告</string>
    <string name="ymlr">
亲爱的%s：
\n\u3000\u3000我衷心祝贺，您的人生掀开了崭新的篇章，从此迈进了新的伟大时代！
\n\u3000\u3000这是一个“回归整体、无私奉献”的时代。我们要团结一心，成为相亲相爱的一家人。这是伟大的爱，无私的爱，超越了种族、信仰、地区和国家。
\n\u3000\u3000生命是什么？生命就是爱！
\n\u3000\u3000生命呵护计划，就是用生命呵护生命的一项健康公益教育。唤醒每个人心中的爱，用爱陪伴爱，用爱等待爱。当然，我们要时刻科学利用廿四节气养生工具。廿四节气既是农耕文化，又是民俗文化，更是养生文化。她是中华民族贡献给全人类的生命智慧，是人类处理自然界一切生命关系的工具。是道法自然的法。
\n\u3000\u3000什么是祝福？祝福是高意识状态的给予。
\n\u3000\u3000什么是感恩？感恩是高意识状态的接受。
\n\u3000\u3000祝福和感恩构成了生命能量。生命能量的流动和融合，就是祝福和感恩的循环往复。
\n\u3000\u3000祝福、感恩，再祝福、再感恩，往复循环，以至无穷。每一次循环，生命能量就会进入到高一级的状态。这是人生最大的意义，包含了全部的生命智慧。
\n\u3000\u3000什么是互助呢？互助就是互相帮助。
\n\u3000\u3000什么是互祝呢？互祝就是互相祝福。互祝同时产生了互相感恩。
\n\u3000\u3000从互助到互祝，让人类从低意识的物质状态迈向高意识的精神状态。
\n\u3000\u3000互助使人的灵魂离开地狱，互祝使人的灵魂进入天堂。互祝包含了互助的全部。
\n\u3000\u3000“健康互祝公社”由此诞生!
\n\u3000\u3000我们的目标是，让每一个家庭都要有自己的首席健康官（CHO），诚恳邀请每一位CHO加入健康互祝公社，成为家庭关系的领袖，带领家人过上永远幸福美好的生活！
\n\u3000\u3000感恩您走进启明课程！
\n\u3000\u3000祝福您越奉献、越健康、越富足！
</string>
    <string name="text_yzqj_hello">亲爱的%s:\n\u3000\u3000您好！</string>
    <string name="text_yeqj_tips"> \u3000\u3000“生命呵护计划”温馨提示：根据您填写的个人信息，结合二十四节气养生传统，建议您在：</string>
    <string name="text_yzqj_birthinfo">\u3000\u3000（您的出生日期为公历%1$s，出生地为%2$s。若您的个人信息不准确，请点击 修正，避免误会。）</string>
    <string name="text_yzqj_bottom">\u3000\u3000“生命呵护计划”秉承中华传统文化“廿四节气养生”理念，为您和家人送上健康祝福。我们会持续提升服务品质，携手与您相伴同行。\n\u3000\u3000欢迎您邀请更多亲人朋友成为CHO（家庭首席健康官）！感恩您为更多人送上的真诚美好祝福！
        \n\u3000\u3000请记住我们的问候语：“今天您送祝福了吗？”</string>
    <string name="relationship_account">人情账</string>
    <string name="bill">账单</string>
    <string name="absolutelyclear">一目了然</string>
    <string name="awordofgold">一字千金</string>
    <string name="text_yzqj_signature">健康互祝公社</string>
    <string name="reward_centers">奖励中心</string>
    <string name="reward_invitation_count">成功邀请（人）\n%d</string>
    <string name="reward_tatal_skb">累计奖励（寿康宝）\n%d</string>
    <string name="reward">奖励：%d</string>
    <string name="reward_invitation">邀请奖励%d</string>
    <string name="reward_star">星级奖励%d</string>
    <string name="invitation_recording">邀请记录</string>
    <string name="cho">CHO</string>
    <string name="commune_member">社员</string>
    <string name="invitation_count">共邀请%s人</string>
    <string name="invitation_cho_count">成为CHO%s人</string>
    <string name="no_phone">未绑定手机号</string>
    <string name="wx_activate">微信激活</string>
    <string name="cash_activate">现金余额激活</string>
    <string name="energy_num">%s生命能量</string>
    <string name="activate">激活</string>
    <string name="progress">进行中</string>
    <string name="finish">已完成</string>
    <string name="largess">赠送</string>
    <string name="energy_recording">激活记录</string>
    <string name="back_to_help_list">返回互祝列表</string>
    <string name="help_again">继续互祝TA</string>
    <string name="becom_cho">成为CHO</string>
    <string name="back_to_application">返回互祝申请</string>
    <string name="year">%d年</string>
    <string name="month">%d月</string>
    <string name="day">%d日</string>
    <string name="guide_page1">祝福是高意识状态的给予\n感恩是高意识状态的接受\n祝福和感恩构成了生命能量</string>
    <string name="guide_page2">我们的目标是让每一个家庭\n都有自己的家庭首席健康官（CHO）\n成为家庭关系的领袖</string>
    <string name="guide_page3">越奉献&#160;&#160;越健康&#160;&#160;越富足</string>
    <string name="guide_join">加入健康互祝公社</string>
    <string name="ranking_day_ability_help_num">互祝人数：%d</string>
    <string name="ranking_love_leader_help_num">参与次数：%d</string>
    <string name="ranking_help_energy">互祝能量：%d</string>
    <string name="dialog_title">错误提示</string>
    <string name="ok">确定</string>
    <string name="reconnect">重连</string>
    <string name="sdk_error">SDK错误：</string>
    <string name="send_message">发送消息</string>
    <string name="reconnect_success">重连成功</string>
    <string name="senddata_timeout">发送数据超时</string>
    <string name="restart_success">重启成功</string>
    <string name="reconnect_start">重连开始</string>
    <string name="reconnect_fail">重连失败</string>
    <string name="connect_fail">连接失败</string>
    <string name="network_poor">网络差，请退出或者重连</string>
    <string name="network_recovery">网络恢复</string>
    <string name="adjust_fps">调整帧率</string>
    <string name="pause_button">离开</string>
    <string name="resume_button">恢复</string>
    <string name="start_button">开始直播</string>
    <string name="stop_button">暂停直播</string>
    <string name="hinit_cornucop_sucess">尊敬的CHO您好,恭喜您已完成%s组聚宝盆赋能，持续关注会有意外惊喜哦！</string>
    <string name="hinit_diloag_start_sucess">尊敬的CHO您好, 您即将开启%s组聚宝盆，进行24节气周期的赋能</string>
    <string name="hinit_diloag_not_sucess">尊敬的CHO您好,您即将开启%s组聚宝盆，由于%s不足，请立即去添加%s</string>
    <string name="hinit_diloag_not_first">聚宝盆将您的一部分资产进行24节气、28节气、72节气的资产赋能，每天每枚产生生命能量和相应的聚宝盆积分</string>
    <string name="diloag_four_bay_hinit">寿康宝+福祺宝+祝佑宝+节气宝</string>
    <string name="fuquan_title_activity">福券简介</string>
    <string name="fuquan_title_hinit_dingyi">福券的定义</string>
    <string name="fuquan_title_dingyi_content">18个福神+24个贵人+30个福祺宝</string>
    <string name="fuquan_title_hinit_used">福券使用门槛</string>
    <string name="fuquan_title_used_content">216个超能</string>
    <string name="fuquan_title_hinit_get">福券的获取</string>
    <string name="fuquan_title_get_content_1">1、每日连续迎花神获得福券</string>
    <string name="fuquan_title_get_content_2">2、参与天下无癌、天下无债互祝组获得福券</string>
    <string name="fuquan_title_hinit_out">福券送出什么</string>
    <string name="fuquan_title_out_content">自己最强的18个节气福神</string>
    <string name="fuquan_title_hinit_in">福券获得什么</string>
    <string name="fuquan_title_in_content">最强24个节气贵人祝福</string>
    <string name="hdxg_jbp_funeng_top_title_hinit">为您的资产进行24节气赋能</string>
    <string name="hdxg_jbp_fubao_top_title_hinit">为您的亲朋好友送上福包</string>
    <string name="hdxg_jbp_funeng_hinit">24365&#160;&#160;健康我做主</string>
    <string name="hdxg_jbp_button_hinit">越奉献&#160;&#160;&#160;越健康&#160;&#160;&#160;越富足</string>
    <string name="add_btn">添加</string>
    <string name="contact_promission">您禁用了访问通讯录功能，该功能无法正常使用，请在设置里启用该功能</string>
    <string name="confirm">确定</string>
    <string name="song_fubao">送上福包</string>
    <string name="song_fubao_quickly">复制短信</string>
    <string name="title_dialog">提示</string>
    <string name="message_permission_rationale">授予下列权限以继续该程序:\n\n%1$s</string>
    <string name="message_permission_always_failed">请允许我们进入设置:\n\n%1$s</string>
    <string name="message_setting_comeback">The user comes back from the settings page.</string>
    <string name="resume">取消</string>
    <string name="setting">设置</string>
    <string name="guize_hinit">1、活动时间：8月26日早9：19分开始，8月29日早9：18分结束。\n 2、向亲友送出5个福包，5个亲友收到福包接福成功后，参与排名。\n 3、如果亲友24小时未收到福包，系统将福包自动退回，可以重新发放。\n 4、福包有效期以排名结束时间为准。\n 5、活动结束3天后统一发放活动物品。</string>
    <string name="permission_diloag_need">请授予我们通讯录权限以继续下一步</string>
    <string name="hold_top_title">中府</string>
    <string name="hold_top_time">8月7日</string>
    <string name="hold_top_content">「中府」寒脾胃之气聚雁肺经之处。肺经起于中焦，是中焦司时雁聚了中府数量经、脾经交会的穴位，同中府是肺经的募穴，是肺与，刺激中府具有贰。秋季靥金，最宜羲肺肺经之气舆脾经之气湍肺热、健脾神气的功和胃利水、止咳平喘、清肃降肺气、节俞，有即时止咳的功效。每咳嗽不止时，贴按中府和肺效。*淋巴迥圈，减蚱胸罔、肩背痛。天持瘢按摩，逻可以强化</string>
    <string name="hold_top_title1">【主治】</string>
    <string name="hold_top_content1">「肺炎、哮喘、胸闷、肺结核、支气管扩张</string>
    <string name="hold_top_title2">【位置】</string>
    <string name="hold_top_content2">在胸部，横平第1肋间隙，锁骨下窝外侧，前正中线旁边6寸（8指横宽）。锁骨外侧端下方有一凹陷，该处再向下1横指即是。</string>
    <string name="duanxin_moban">【生命呵护计划】\n\n  分享上校大米\n  福送千家万户 \n  释放生命能量\n  让爱洒满人间 \n\n  下载互祝APP安卓版链接:\n  http://t.asdyf.com/home/app/index \n  还有千元新人礼包</string>
    <string name="daunxin_moban_nohttp">【生命呵护计划】\n 分享上校大米\n 福送千家万户\n 释放生命能量\n 让爱洒满人间\n 关注《阖家康》公众号，点击-新手入门-下载手机APP接福包。\n 还有千元新人礼包，退订回T。</string>
    <string name="hinit_fu_name">%s邀请您加入\n健康互祝公社</string>
    <string name="hinit_fu_qr">扫码接福得大米\n福包数量有限</string>
    <string name="hinit_fu_qr_sucess">扫码了解生命呵护计划</string>
</resources>