<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/user_basepage" />

    <LinearLayout
        style="@style/view_marginlefgtright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_content_bg"
            android:orientation="vertical"
            android:padding="@dimen/dp35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp35"
                android:gravity="center"
                android:text="@string/code_title"
                android:textColor="@color/text_biaoTi_color"
                android:textSize="@dimen/text_pageTop_size"
                android:textStyle="bold" />


            <!---->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_pw_icon" />

                <View
                    style="@style/view_marginlefgtright"
                    android:layout_width="0.6dp"
                    android:layout_height="13dp"
                    android:background="@color/linesubg" />

                <EditText
                    android:id="@+id/phonetype_et_code"
                    style="@style/view_paddtopbottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/code_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/login_hint_color"
                    android:textSize="@dimen/text_contents_size" />

                <TextView
                    android:id="@+id/phonetype_tv_getcode"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:background="@drawable/corners_bg_login_new"
                    android:gravity="center"
                    android:text="@string/code_get"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_contents_size" />
            </LinearLayout>

            <include layout="@layout/line_new" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp15"
                android:text="*您的账号存在异常登录，请重新验证。"
                android:textColor="@color/red_FF7474"
                android:textSize="@dimen/text_dp12_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp15"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal">

                <TextView
                    android:id="@+id/btn_next"
                    style="@style/login_new"
                    android:background="@drawable/corners_bg_logingray_new"
                    android:text="@string/login_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
