<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="@dimen/dp30"
        android:background="@drawable/corners_bg_write10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/top_bg_fu_shared"
                android:scaleType="centerCrop"
                app:riv_border_width="0dp"
                app:riv_corner_radius_top_left="8dp"
                app:riv_corner_radius_top_right="8dp"
                app:riv_mutate_background="true"
                app:riv_oval="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image_layout"
            android:layout_gravity="bottom"
            android:background="@drawable/corners_bg_writebottom"
            android:gravity="center"
            android:orientation="horizontal"
           >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp10">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_imgtextleftright"
                    android:layout_marginBottom="@dimen/padd_imgtextleftright"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/hinit_fu_name"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/text_dp12_size" />

                <include layout="@layout/line_xu" />

                <TextView
                    android:id="@+id/tv_hinit_diloag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:paddingTop="@dimen/dp3"
                    android:text="@string/hinit_fu_qr"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/text_dp12_size" />

                <TextView
                    android:id="@+id/tv_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp3"
                    android:singleLine="true"
                    android:text="先到先得"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/text_biaoTi_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_qr"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal|top"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/corners_bg_write">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:background="@mipmap/app_icon"
                        android:scaleType="fitXY" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_hinit_qr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="@dimen/jianJu"
                    android:paddingBottom="@dimen/dp10"
                    android:gravity="center"
                    android:text="@string/hinit_fu_qr_sucess"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/text_min_size" />
            </FrameLayout>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_bg_writetop10"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="分享到"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_tishi_size" />

        <LinearLayout
            style="@style/view_padd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:drawableTop="@mipmap/wisheachdetails_share_friends"
                android:drawablePadding="@dimen/padd_imgtextleftright"
                android:gravity="center"
                android:text="微信好友"
                android:textColor="@color/text_healthcontents_color"
                android:textSize="@dimen/text_dp12_size" />

            <TextView
                android:id="@+id/tv_wxquan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp25"
                android:drawableTop="@mipmap/wisheachdetails_share_circleoffriends"
                android:drawablePadding="@dimen/padd_imgtextleftright"
                android:gravity="center"
                android:text="朋友圈"
                android:textColor="@color/text_healthcontents_color"
                android:textSize="@dimen/text_dp12_size" />

        </LinearLayout>

        <include layout="@layout/line" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="取消"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_biaoTi_size" />


    </LinearLayout>
</LinearLayout>